Fixed trending-container content and adjusted alignment

--- a/style.css
+++ b/style.css
@@ -252,6 +252,18 @@ hr {
     background-color: #FFFFFF;
     border-radius: .5rem;
     font-size: .75rem;
+    grid-column: 1fr 3fr;
+}
+
+.trending-content {
+    display: flex;
+    gap: 1rem;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.icons, .info {
+    display: grid;
 }
 
 .trending {
